--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="lib/main/ch.qos.logback.logback-classic-1.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/main/ch.qos.logback.logback-core-1.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/main/org.slf4j.slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/main/rameses-0.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/main/cilantro-0.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/main/org.freemarker.freemarker-2.3.21.jar"/>
+	<classpathentry kind="lib" path="lib/main/com.fizzed.stork-core-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/main/com.fizzed.stork-launcher-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
