updating build so output says jetpack wehn running jetpack

--- a/build.xml
+++ b/build.xml
@@ -37,7 +37,7 @@
 			<fileset dir="${basedir}" includes="version.properties" />
 			<fileset dir="${build.dir}/work/bin" includes="**/*.class" />
 		</jar>
-		<java classname="jetpack.Builder">
+		<java classname="jetpack.Builder" taskname="jetpack">
 			<arg line="jetpack jetpack.Builder linux,windows ${build.dir}/work/scripts" />
 			<classpath>
 				<fileset dir="${library.dir}/main" includes="*.jar" />
