--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/main/com.fizzed.stork-launcher-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/main/launch4j.jar"/>
 	<classpathentry kind="lib" path="lib/main/xstream.jar"/>
+	<classpathentry kind="lib" path="lib/main/commons-compress-1.14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
